Timeline orders itself by time with posts and images

--- a/react-folder/public/index.html
+++ b/react-folder/public/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
-    </style>
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap/css/bootstrap.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>You and Me</title>
+    <title> u&i</title>
   </head>
   <body>
     <div id="root"></div>
@@ -30,6 +28,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-
+    <script src="%PUBLIC_URL%/bootstrap/js/bootstrap.js" charset="utf-8"></script>
   </body>
 </html>
