Bootstrapped, front page more or less done, signup/login done

--- a/react-folder/public/index.html
+++ b/react-folder/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Josefin+Slab|Poppins" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,6 +28,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <script src="%PUBLIC_URL%/bootstrap/js/bootstrap.js" charset="utf-8"></script>
+    <!-- <script src="%PUBLIC_URL%/bootstrap/js/bootstrap.js" charset="utf-8"></script> -->
   </body>
 </html>
