Started working on the board, dropdown for type of post works

--- a/react-folder/public/index.html
+++ b/react-folder/public/index.html
@@ -16,7 +16,7 @@
     -->
     <title> u&i</title>
   </head>
-  <body>
+  <body class="default">
     <div id="root"></div>
     <!--
       This HTML file is a template.
